@@ -63,6 +63,8 @@ Each release lists incompatible changes at its top.
 
 @item Improve icon size in StyleTab. Also improve speed and decrease memory usage by mirroring images [fuchur]
 
+@item Use @code{menulibre} instead of @code{alacarte} in XFCE and MATE integration by default [fuchur]
+
 @item Add update german translation [fuchur]
 
 @item Improve doc strings in many modules [fuchur]
