@@ -1,3 +1,8 @@
+2014-04-09  Christopher Roy Bratusek <nano@tuxfamily.org>
+	* sawfish/lisp/sawfish/wm/integration/xfce.jl
+	* sawfish/lisp/sawfish/wm/integration/mate.jl:
+	  use menulibre instead of alacarte for XFCE and MATE [fuchur]
+
 2014-04-06  Christopher Roy Bratusek <nano@tuxfamily.org>
 	* po/de.po: update german translation [fuchur]
 
